# charon

./: .gitignore  CHANGELOG.md  README.md  charon  pyproject.toml  requirements.txt
assets/: lantern_wraith_terminal_sprite_v2.json  mascot_config.json  title_ascii.txt  title_ascii_mid.txt
crates/charon-tui/: Cargo.toml  TESTING.md
crates/charon-tui/src/: app.rs  backend.rs  chat.rs  chat_view.rs  cli.rs  clipboard.rs  config.rs  daemon.rs  daemon_client.rs  detect.rs  f1_mono.rs  grid.rs  input.rs  layout.rs  lib.rs  main.rs  native_session.rs  parser.rs  protocol.rs  render.rs  screen.rs  session.rs  terminal.rs  util.rs
crates/charon-tui/src/views/: chat_view.rs  dashboard_view.rs  inter_agent_view.rs  mod.rs  sessions_view.rs
crates/charon-tui/tests/: daemon_client.rs  daemon_detect.rs  daemon_ephemeral.rs  daemon_handoff.rs  daemon_persist.rs  daemon_persist_toggle.rs  daemon_tmux.rs  daemon_workspace.rs
design-library/: README.md
docs/: README.md  agent-abilities-registry.md  charon-gym.md  cross-agent-threads.md  design-library-spec.md  episodic-memory.md  experiments.md  install.md  judge-loop-case-study.md  manual-provider-switch-transfer-test-checklist.adoc  memeval-findings.md  memory-benchmark-plan.md  memory-retrieval-eval.md  memory-subsystem.md  onboarding-summary.md  remote-agent-teams.md  reward-hacking-demo.md  rust-tui-plan.md  rust-tui-replacement-plan.md  sessions-and-daemon.md  thread-memory-research.md  three-tier-memory.md
libs/: store.py
results/: charon_gym_episodes.json  exp_adaptive_injection.json  exp_aesthetic_heldout.json  exp_aesthetic_heldout_control.json  exp_decision_extraction.json  exp_emergent_hacking.json  exp_fts_codememory.json  exp_fts_scale.json  exp_gym_bestofn.json  exp_hacking_threshold.json  exp_judge_injection.json  exp_memory_ablation.json  exp_memory_ablation_adaptive.json  exp_memory_ablation_ftsfix.json  exp_memory_hacking.json  exp_memory_hacking_adversarial.json  exp_memory_hacking_neutral.json  exp_thread_reconstruction.json  exp_thread_reconstruction_hard.json  exp_thread_scale.json  judge_variance.json  reward_hacking_demo.json
scripts/: bench_longmemeval.py  charon_agents.py  charon_chat.py  charon_gym_runner.py  cleanup_think_tags.py  design_library_annotate.py  design_library_ingest.py  eval_longmemeval.py  exp_adaptive_injection.py  exp_aesthetic_heldout.py  exp_aesthetic_heldout_control.py  exp_decision_extraction.py  exp_emergent_hacking.py  exp_episodic_queries.py  exp_fts_codememory.py  exp_fts_scale.py  exp_gym_bestofn.py  exp_hacking_threshold.py  exp_ipms_matrix.py  exp_judge_injection.py  exp_memeval.py  exp_memeval_episodic.py  exp_memory_ablation.py  exp_memory_hacking.py  exp_real_traces.py  exp_thread_reconstruction.py  install.sh  (+14 more)
(+528 files in other folders)
