[project]
name = "charon"
version = "0.1.0"
description = "A single-user agent operating system"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.28",
    "playwright>=1.50",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
extend-exclude = [
    ".venv",
    ".archive",
    ".charon_state",
    "design-library",
    "crates",
    "results",
    "data",
    "demos",
    "videos",
]

[tool.ruff.lint]
# Conservative, error-focused gate: import errors, syntax/runtime errors,
# pyflakes, bugbear, and pylint errors. No style or formatting rules.
select = ["E4", "E7", "E9", "F", "B", "PLE"]

[tool.ruff.lint.per-file-ignores]
# Tool registry lives at the bottom of the module by design (optional imports
# behind try/except with stdout suppression); hoisting them would be invasive.
"apps/core-daemon/tools/__init__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "apps/core-daemon",
    "apps/tui",
    "apps/tui/opentui",
    "libs",
    ".",
]
