[package]
name = "charon-tui"
version = "0.1.0"
edition = "2021"
description = "Multi-session terminal grid with embedded VTE emulators and backend-agnostic byte streams"

[lib]
name = "charon_tui"
path = "src/lib.rs"

[[bin]]
name = "charon"
path = "src/main.rs"

[[bin]]
name = "charond"
path = "src/bin/charond.rs"

[dependencies]
vte = "0.15"
crossterm = "0.28"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
base64 = "0.22"
